--- a/css/footer.css
+++ b/css/footer.css
@@ -29,3 +29,59 @@ footer {
 .central-office a {
   color: var(--white-color);
 }
+
+@media screen and (max-width: 650px) {
+  .footer-main .navigation {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-main .navigation .menu-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2.5rem;
+    padding-top: 5rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .address {
+    display: flex;
+    column-gap: 5rem;
+  }
+  .footer-main-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .address {
+    display: flex;
+    column-gap: 5rem;
+  }
+  .footer-main-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 5rem;
+    text-align: center;
+  }
+  .footer-main-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 5rem;
+  }
+}
