--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,10 @@
   background-position: right;
 }
 
+.hero .hero-phone-tablet {
+  display: none;
+}
+
 .hero-left {
   width: 475px;
 }
@@ -46,7 +50,8 @@ body {
 .design-cards-left {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
     url(../images/home/desktop/image-web-design-large.jpg);
-  width: 541px;
+  max-width: 526px;
+  width: 100%;
   height: 640px;
   background-position: center;
   background-size: cover;
@@ -58,16 +63,29 @@ body {
   border-radius: 1.5rem;
 }
 
+.design-cards-left:hover,
+.design-cards-right-up:hover,
+.design-cards-right-bottom:hover {
+  background-image: linear-gradient(
+    rgba(244, 69, 5, 0.5),
+    rgba(241, 86, 20, 0.5)
+  );
+  cursor: pointer;
+}
+
 .design-cards h2 {
   font-size: var(--h2-fs);
   line-height: var(--h2-lh);
   font-weight: 500;
+  padding: 0 9rem;
+  text-align: center;
 }
 
 .design-cards span {
   font-size: 1.5rem;
   letter-spacing: 5px;
   font-weight: 500;
+  text-align: center;
 }
 
 .design-cards-right {
@@ -80,7 +98,8 @@ body {
 .design-cards-right-up {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
     url(../images/home/desktop/image-app-design.jpg);
-  width: 541px;
+  max-width: 526px;
+  width: 100%;
   height: 308px;
   display: flex;
   flex-direction: column;
@@ -92,7 +111,8 @@ body {
 .design-cards-right-bottom {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
     url(../images/home/desktop/image-graphic-design.jpg);
-  width: 541px;
+  max-width: 526px;
+  width: 100%;
   height: 308px;
   display: flex;
   flex-direction: column;
@@ -110,6 +130,12 @@ body {
   margin-top: 16rem;
 }
 
+.illustration-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .illustration span {
   text-transform: uppercase;
   letter-spacing: 5px;
@@ -118,12 +144,11 @@ body {
 
 .illustration p {
   text-align: center;
+  padding: 0 1rem;
 }
 
 .illustration-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
 
 .illustration-card img {
@@ -131,17 +156,6 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-
-/* .section-1,
-.section-2 {
-  background-image: url(../images/shared/desktop/bg-pattern-leaf.svg);
-  background-repeat: no-repeat;
-}
-
-.section-2 {
-  background-position: right;
-  overflow: hidden;
-} */
 
 .lets-talk-main {
   background-color: var(--peach-color);
@@ -161,7 +175,8 @@ body {
   font-size: var(--h2-fs);
   line-height: var(--h2-lh);
   font-weight: 500;
-  width: 26.8rem;
+  max-width: 26.8rem;
+  width: 100%;
 }
 
 .lets-talk-left p {
@@ -170,4 +185,120 @@ body {
   font-weight: 400;
   width: 45.9rem;
   padding: 2rem 0 4.6rem 0;
+}
+
+/* HEADER MEDIA RESPON */
+
+@media screen and (max-width: 850px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 6rem;
+  }
+  .hero-left h1,
+  .hero-left p {
+    text-align: center;
+  }
+  .hero-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 7rem;
+  }
+  .hero .hero-phone-desktop {
+    display: none;
+  }
+  .hero .hero-phone-tablet {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .hero-left h1 {
+    font-size: 3.6rem;
+    line-height: 3.6rem;
+  }
+  .hero-left p {
+    font-size: 1.4rem;
+  }
+  .hero-left {
+    padding: 2rem 5rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero {
+    padding: 1rem 10rem 0 10rem;
+  }
+  .hero-left h1,
+  .hero-left p {
+    padding: 1rem 3rem;
+  }
+}
+
+/* MAIN MEDIA RESPONSIBILTY */
+
+@media screen and (max-width: 1050px) {
+  .design-cards-left {
+    margin-right: 1.5rem;
+  }
+  .design-cards {
+    margin-top: 10rem;
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .design-cards {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    margin-top: 8rem;
+  }
+  .design-cards-left,
+  .design-cards-right-up,
+  .design-cards-right-bottom {
+    max-width: 696px;
+    width: 100%;
+    height: 200px;
+  }
+  .design-cards-right {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+  .illustration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 7rem;
+  }
+  .illustration-card {
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;
+  }
+  .illustration span {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .lets-talk-main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  .lets-talk-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lets-talk-left p {
+    padding: 2rem 5rem;
+  }
 }
