--- a/css/graphic-design.css
+++ b/css/graphic-design.css
@@ -1,1 +1,231 @@
 @import "./global.css";
+@import "./nav.css";
+@import "./footer.css";
+.hero {
+  background-color: var(--peach-color);
+  text-align: center;
+  padding: 6.4rem 19.1rem;
+  border-radius: 8px;
+  background-image: url(../images/web-design/desktop/bg-pattern-intro-web.svg);
+  background-position: center;
+}
+
+.hero h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+}
+
+.hero p {
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  padding-top: 2.4rem;
+}
+
+.vertical-cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 16rem;
+  gap: 3rem;
+}
+
+.vert-card img {
+  max-width: 340px;
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+.ver-card-bottom {
+  background-color: #fdf3f0;
+  border-radius: 0 0 8px 8px;
+  text-align: center;
+  padding: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  max-width: 340px;
+  width: 100%;
+}
+
+.ver-card-bottom span {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-size: var(--h3-fs);
+  line-height: var(--p-lh);
+  color: var(--peach-color);
+}
+
+.ver-card-bottom p {
+  color: var(--black-color);
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  max-width: 286px;
+  width: 100%;
+}
+
+.design-cards-left:hover,
+.design-cards-right:hover {
+  background-image: linear-gradient(
+    rgba(244, 69, 5, 0.5),
+    rgba(241, 86, 20, 0.5)
+  );
+  cursor: pointer;
+}
+
+.design-cards h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  font-weight: 500;
+  padding: 0 9rem;
+  text-align: center;
+}
+
+.design-cards a {
+  font-size: 1.5rem;
+  letter-spacing: 5px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--white-color);
+}
+
+.design-cards a:hover {
+  font-size: 3rem;
+  letter-spacing: 7px;
+  font-weight: 800;
+  text-align: center;
+  color: var(--dark-gray-color);
+  transition: 0.5s;
+}
+
+.design-cards {
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  margin-top: 16rem;
+}
+
+.design-cards-left {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+    url(../images/home/desktop/image-app-design.jpg);
+  max-width: 526px;
+  width: 100%;
+  height: 308px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+}
+
+.design-cards-right {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
+    url(../images/home/desktop/image-graphic-design.jpg);
+  max-width: 526px;
+  width: 100%;
+  height: 308px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+}
+
+.lets-talk-main {
+  background-color: var(--peach-color);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7.2rem 9.6rem 4.6rem 9.5rem;
+  margin-top: 7rem;
+  background-image: url(../images/shared/desktop/bg-pattern-call-to-action.svg);
+  background-position: center;
+  position: relative;
+  top: 9rem;
+}
+
+.lets-talk-left h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  font-weight: 500;
+  width: 26.8rem;
+}
+
+.lets-talk-left p {
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  font-weight: 400;
+  width: 45.9rem;
+  padding: 2rem 0 4.6rem 0;
+}
+
+@media screen and (max-width: 750px) {
+  .hero {
+    padding: 3rem;
+  }
+  .vertical-cards {
+    display: flexbox;
+    justify-content: center;
+    margin-top: 8rem;
+  }
+  .vert-card {
+    display: flex;
+  }
+  .vert-card img {
+    border-radius: 8px 0 0 px;
+  }
+  .ver-card-bottom {
+    border-radius: 0 8px 8px 0;
+  }
+  .design-cards {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.4rem;
+    margin-top: 8rem;
+  }
+  .design-cards-left {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+      url(../images/home/tablet/image-app-design.jpg);
+    max-width: 689px;
+    width: 100%;
+    height: 200px;
+  }
+  .design-cards-right {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
+      url(../images/home/tablet/image-graphic-design.jpg);
+    max-width: 689px;
+    width: 100%;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .lets-talk-main {
+    display: flex;
+    flex-direction: column;
+  }
+  .lets-talk-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lets-talk-left p {
+    padding: 2rem 5rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 500px) {
+  .vert-card {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 6rem;
+    gap: 3rem;
+  }
+}
