--- a/css/home.css
+++ b/css/home.css
@@ -81,11 +81,21 @@ body {
   text-align: center;
 }
 
-.design-cards span {
+.design-cards a {
   font-size: 1.5rem;
   letter-spacing: 5px;
   font-weight: 500;
   text-align: center;
+  color: var(--white-color);
+}
+
+.design-cards a:hover {
+  font-size: 3rem;
+  letter-spacing: 7px;
+  font-weight: 800;
+  text-align: center;
+  color: var(--dark-gray-color);
+  transition: 0.5s;
 }
 
 .design-cards-right {
