--- a/css/location.css
+++ b/css/location.css
@@ -1,1 +1,117 @@
 @import "./global.css";
+@import "./nav.css";
+@import "./footer.css";
+.country-main {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3.2rem;
+}
+
+.country span {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  text-transform: capitalize;
+  color: var(--peach-color);
+}
+
+.country {
+  background-color: #fdf3f0;
+  background-image: url(../images/shared/desktop/bg-pattern-small-circle.svg);
+  background-position: center;
+  background-size: contain;
+  padding: 8.8rem 11.5rem 8.8rem 9.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.4rem;
+  border-radius: 8px;
+}
+
+.country .address {
+  display: flex;
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  column-gap: 15rem;
+  color: var(--black-color);
+}
+
+.contact-info a {
+  color: var(--black-color);
+}
+
+.map {
+  border-radius: 8px;
+  max-width: 350px;
+  width: 100%;
+}
+
+.lets-talk-main {
+  background-color: var(--peach-color);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7.2rem 9.6rem 4.6rem 9.5rem;
+  margin-top: 7rem;
+  background-image: url(../images/shared/desktop/bg-pattern-call-to-action.svg);
+  background-position: center;
+  position: relative;
+  top: 12rem;
+}
+
+.lets-talk-left h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  font-weight: 500;
+  max-width: 26.8rem;
+  width: 100%;
+}
+
+.lets-talk-left p {
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  font-weight: 400;
+  width: 45.9rem;
+  padding: 2rem 0 4.6rem 0;
+}
+
+@media screen and (max-width: 900px) {
+  .country-main {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+  }
+  .map {
+    max-width: 900px;
+    width: 100%;
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .country span {
+    text-align: center;
+  }
+  .country {
+    padding: 2rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .lets-talk-main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  .lets-talk-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lets-talk-left p {
+    padding: 2rem 5rem;
+  }
+}
