--- a/css/contact.css
+++ b/css/contact.css
@@ -1,1 +1,145 @@
 @import "./global.css";
+@import "./nav.css";
+@import "./button.css";
+@import "./footer.css";
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--peach-color);
+  padding-right: 10rem;
+}
+
+.hero-left h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+}
+
+.hero-left p {
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  max-width: 50rem;
+  width: 100%;
+  padding-top: 3rem;
+}
+
+.hero-left {
+  padding: 13.5rem 0 16rem 9.5rem;
+}
+
+.hero-right form {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  padding-bottom: 4rem;
+}
+
+form input::placeholder {
+  background-color: var(--peach-color);
+  padding: 3rem;
+}
+
+.countries {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16rem;
+}
+
+.countries .button-on-light {
+  padding: 1.2rem 1.5rem;
+}
+
+.countries span {
+  color: var(--black-color);
+  text-transform: uppercase;
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  padding: 4.8rem 0 3.2rem 0;
+  letter-spacing: 5px;
+}
+
+.countries img {
+  background-image: url(../images/shared/desktop/bg-pattern-small-circle.svg);
+}
+
+.canada,
+.australia,
+.united-kingdom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lets-talk-main {
+  background-color: var(--peach-color);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7.2rem 9.6rem 4.6rem 9.5rem;
+  margin-top: 7rem;
+  background-image: url(../images/shared/desktop/bg-pattern-call-to-action.svg);
+  background-position: center;
+  position: relative;
+  top: 12rem;
+}
+
+.lets-talk-left h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  font-weight: 500;
+  max-width: 26.8rem;
+  width: 100%;
+}
+
+.lets-talk-left p {
+  font-size: var(--p-fs);
+  line-height: var(--p-lh);
+  font-weight: 400;
+  width: 45.9rem;
+  padding: 2rem 0 4.6rem 0;
+}
+
+@media screen and (max-width: 900px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+  }
+  form {
+    padding-top: 1rem;
+  }
+  .hero h2 {
+    text-align: center;
+  }
+  .hero p {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .lets-talk-main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  .lets-talk-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .countries {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lets-talk-left p {
+    padding: 2rem 5rem;
+  }
+}
